Improve homepage - refactor code for readability, add styles, fix controllers to supply the required amount of data

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,31 +1,48 @@
 @import "bootstrap";
 
+.bg {
+ background-color: rgb(49, 58, 49);
+ border-radius: 0.6rem;
+}
+
 .card {
-  max-width: 50rem;
+  max-width: 60rem;
 }
 
-.user,
-.collection,
-.item {
-  border-top: 2px solid rgba(47, 79, 79, 0.459);
+.home-container {
+  max-width: 1700px;
 }
 
-#users,
-#collections,
-#items {
-  background-color: rgba(210, 180, 140, 0.466);
+.text-link,
+.text-link a {
+  color: $success;
+  text-decoration: none;
+  z-index: 1;
 }
 
-#details {
-  background-color: rosybrown;
+.tag {
+  @extend a;
+}
+
+.text-link:hover {
+  cursor: pointer;
+  a {
+    filter: brightness(120%);
+    text-decoration: underline;
+  }
+}
+
+.item-link:hover {
+  cursor: pointer;
+  background-color: $gray-800;
 }
 
 .accordion {
   --bs-accordion-border-color: #198754;
-	--bs-accordion-btn-color: #198754;
-	--bs-accordion-btn-bg: none;
-	--bs-accordion-active-color: dark;
-	--bs-accordion-active-bg: #198754;
+	--bs-accordion-btn-color: $light;
+	--bs-accordion-btn-bg: #198754;
+	--bs-accordion-active-color: $gray-400;
+	--bs-accordion-active-bg: $gray-800;
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem #19875438;
 }
 
